# wxz_pie_menus

./: .gitignore  A-pie.py  C-pie.py  D-pie.py  E-pie.py  F-pie.py  LICENCE  ListImages.js  Outliner-pie.py  Q-key.py  Q-pie.py  Q_alt-key.py  R-pie.py  README.md  S_ctrl-pie.py  Space-key.py  T-pie.py  Tab_ctrl-pie.py  V-pie.py  W-pie.py  X-key.py  X-pie.py  X_ctrl_shift-pie.py  Z-pie.py  __init__.py  auto_load.py  blender_manifest.toml  change_keys.py  change_settings.py  dependencies.py  download.py  enable_relay_addons.py  items.py  manifest.json  operators.py  packup.py  panels.py  pip_installer.py  pip_package.py  prefrences.py  (+7 more)
keymap_presets/: My_Keymaps.py  Stored_Keymaps.py
nodes_presets/: __init__.py
operator/: addons_lib_presets.json  assets_lib_presets.json  change_assets_lib.py  change_keys.py  change_nodes_presets.py  change_settings.py  dependencies.py  enable_relay_addons.py  extensions_setting.py  memory_useage.py  orient_origin_to_selection.py  pip_installer.py  test_operators.py  unbevel.py  utils.py  xz_scripts.py
parts_addons/: Auto_Active_Camera_Switcher.py  Browser_Scroll_Resizer.py  DistributeObjects.py  NGon_Loop_Select.py  Quicklapse.py  Text_Input.py  Tris_to_Quads.py  delete_static_channels.py  drop_it.py  file_browser_path_button.py  formula_to_nodes.py  memory_useage.py  play_stop.py  restart.py  test_TT.py  uv_drag_island.py  uv_squares.py  xz_scripts.py
pie/: .gitignore  A-pie.py  A_alt_shift-key.py  A_alt_shift_key.py  A_ctrl_shift-pie.py  A_ctrl_shift_pie.py  A_pie.py  A_shift-pie.py  A_shift_pie.py  B-pie.py  B_ctrl-pie copy.py  (+72 more)
(+203 files in other folders)
